fix dot alignment

--- a/src/features/todos/components/TodoCalendar/TodoCalendar.scss
+++ b/src/features/todos/components/TodoCalendar/TodoCalendar.scss
@@ -113,7 +113,7 @@
     background-color: #333;
     border-radius: 50%;
     position: absolute;
-    bottom: 15%;
+    bottom: 12%;
     left: calc(50% - 4px);
 }
 
